# todolist_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_tg_chat_id_alter_tguser_tg_user_id.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal_goalcomment.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py  0006_alter_goal_description.py
tests/: fixtures.py
tests/test_views/board/: create_test.py  delete_test.py  detail_test.py
tests/test_views/goal/: create_test.py  list_test.py
tests/test_views/goal_category/: detail_test.py
tests/test_views/goal_comment/: delete_test.py
todolist/: settings.py  urls.py
